<resources>
    <string name="app_name">QuizApp</string>
    <string name="app_menu">Main Menu</string>
    <string name="app_multiple">Multiple Choice</string>
    <string name="app_one">Single Option</string>
    <string name="app_written">Written Anser</string>
    <string name="app_finish">Quiz Results</string>
    <string name="name_hint">Insert your name here</string>
    <string name="one_question">What is the capital of \ </string>
    <string name="one_q1">Argentina</string>
    <string name="one_q1_a1">Buenos Aires</string>
    <string name="one_q1_a2">Mexico City</string>
    <string name="one_q1_a3">Bogota</string>
    <string name="one_q1_a4">Caracas</string>
    <string name="one_q2">Croatia</string>
    <string name="one_q2_a1">Vienna</string>
    <string name="one_q2_a2">Ljubljana</string>
    <string name="one_q2_a3">Zagreb</string>
    <string name="one_q2_a4">Sofia</string>
    <string name="one_q3">Malaysia</string>
    <string name="one_q3_a1">Manila</string>
    <string name="one_q3_a2">Colombo</string>
    <string name="one_q3_a3">Jakarta</string>
    <string name="one_q3_a4">Kuala Lumpur</string>
    <string name="one_q4">Canada</string>
    <string name="one_q4_a1">Washington</string>
    <string name="one_q4_a2">Ottawa</string>
    <string name="one_q4_a3">Canberra</string>
    <string name="one_q4_a4">Wellington</string>
    <string name="one_q5">Israel</string>
    <string name="one_q5_a1">Beirut</string>
    <string name="one_q5_a2">Dhaka</string>
    <string name="one_q5_a3">Alger</string>
    <string name="one_q5_a4">Jerusalem</string>
    <string name="multiple_question">Which capitals are located in \ </string>
    <string name="multiple_q1">North America</string>
    <string name="multiple_q1_a1">Melbourne</string>
    <string name="multiple_q1_a2">Washington</string>
    <string name="multiple_q1_a3">London</string>
    <string name="multiple_q1_a4">Mexico City</string>
    <string name="multiple_q2">Europe</string>
    <string name="multiple_q2_a1">Zagreb</string>
    <string name="multiple_q2_a2">Tbilisi</string>
    <string name="multiple_q2_a3">Freetown</string>
    <string name="multiple_q2_a4">Warsaw</string>
    <string name="multiple_q3">South America</string>
    <string name="multiple_q3_a1">Santiago</string>
    <string name="multiple_q3_a2">Guatemala</string>
    <string name="multiple_q3_a3">Quito</string>
    <string name="multiple_q3_a4">Madrid</string>
    <string name="multiple_q4">Africa</string>
    <string name="multiple_q4_a1">Kathmandu</string>
    <string name="multiple_q4_a2">Gaborone</string>
    <string name="multiple_q4_a3">Bangkok</string>
    <string name="multiple_q4_a4">Luanda</string>
    <string name="multiple_q5">Asia</string>
    <string name="multiple_q5_a1">Ulaanbataar</string>
    <string name="multiple_q5_a2">Cape Town</string>
    <string name="multiple_q5_a3">New Delhi</string>
    <string name="multiple_q5_a4">Cardiff</string>
    <string name="written_question">What is the capital of \ </string>
    <string name="written_q1">Iran</string>
    <string name="written_a1">Tehran</string>
    <string name="written_q2">Morocco</string>
    <string name="written_a2">Rabat</string>
    <string name="written_q3">Italy</string>
    <string name="written_a3">Rome</string>
    <string name="written_q4">Turkey</string>
    <string name="written_a4">Ankara</string>
    <string name="written_q5">Qatar</string>
    <string name="written_a5">Soha</string>
    <string name="q_mark"> \?</string>
    <string name="button_start">Start</string>
    <string name="button_rules">Rules</string>
    <string name="button_multiple_choice">Multiple Choice</string>
    <string name="button_one_option">Choose the correct answers</string>
    <string name="button_written_answer">Written answer</string>
    <string name="button_back_main">Go back to the main screen</string>
    <string name="button_back_menu">Go back to main menu</string>
    <string name="type_answer">Type answer</string>
    <string name="congratulations">Congratulations</string>
    <string name="boo">Boo</string>
    <string name="final_score">Final score</string>
    <string name="welcome">Please choose from below:</string>
    <string name="button_next_question">Next question</string>
    <string name="time">Time</string>
</resources>
