<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <!--Question-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/multiple_question"
            style="@style/text_typical"
            android:text="@string/multiple_question" />

        <TextView
            android:id="@+id/multiple_q"
            style="@style/text_typical"
            android:text="@string/multiple_q1" />

        <TextView
            style="@style/text_typical"
            android:text="@string/q_mark" />

    </LinearLayout>

    <!--Answer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/multiple_a1"
            style="@style/button_answer"
            android:text="@string/multiple_q1_a1" />

        <CheckBox
            android:id="@+id/multiple_a2"
            style="@style/button_answer"
            android:text="@string/multiple_q1_a2" />

        <CheckBox
            android:id="@+id/multiple_a3"
            style="@style/button_answer"
            android:text="@string/multiple_q1_a3" />

        <CheckBox
            android:id="@+id/multiple_a4"
            style="@style/button_answer"
            android:text="@string/multiple_q1_a4" />

    </LinearLayout>

    <!--Submit-->
    <Button
        android:id="@+id/button_next_question"
        style="@style/button_complementary"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/button_next_question" />

</LinearLayout>