<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <TextView
        android:id="@+id/welcome"
        style="@style/button_edit"
        android:text="@string/welcome" />

    <TextView
        style="@style/button_edit"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/button_multiple_choice"
        style="@style/button_typical"
        android:onClick="goToMultipleChoice"
        android:text="@string/button_multiple_choice" />

    <Button
        android:id="@+id/button_one_option"
        style="@style/button_typical"
        android:onClick="goToOneOption"
        android:text="@string/button_one_option" />

    <Button
        android:id="@+id/button_written_answer"
        style="@style/button_typical"
        android:layout_height="wrap_content"
        android:onClick="goToWrittenAnswer"
        android:text="@string/button_written_answer" />


</LinearLayout>