<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <TextView
        style="@style/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/congratulations"
        android:text="@string/congratulations"/>

    <TextView
        style="@style/button_edit"
        android:id="@+id/final_score"
        android:text="@string/final_score"/>


    <Button
        style="@style/button_typical"
        android:id="@+id/button_back_menu"
        android:onClick="goToMenuActivity"
        android:text="@string/button_back_menu"/>

</LinearLayout>